force-app/main/default/objects/Daily_Report__c/Daily_Report__c.object-meta.xml
<CustomObject>
    <label>Daily Site Job</label>
    <nameField>
        <displayFormat>DSJ-{00000}</displayFormat>
        <label>Daily Site Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Site Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>