force-app/main/default/objects/Daily_Report__c/fields/Auto_Create_Daily_Report_Items__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Daily_Report_Items__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Create Daily Report Items</label>
    <type>Checkbox</type>
</CustomField>