force-app/main/default/objects/Daily_Report__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Daily Site Jobs</relationshipLabel>
    <relationshipName>Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>