force-app/main/default/objects/Daily_Report__c/fields/Daily_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>Daily_Summary_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Site Job Summary</label>
    <referenceTo>Daily_Summary_Report__c</referenceTo>
    <relationshipLabel>Daily Site Jobs</relationshipLabel>
    <relationshipName>Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>