force-app/main/default/objects/Daily_Report__c/fields/DSJ_For_My_Approval__c.field-meta.xml
<CustomField>
    <fullName>DSJ_For_My_Approval__c</fullName>
    <formula>Manager__c =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSJ For My Approval</label>
    <type>Checkbox</type>
</CustomField>