force-app/main/default/objects/Daily_Report__c/fields/DSJS_Status__c.field-meta.xml
<CustomField>
    <fullName>DSJS_Status__c</fullName>
    <formula>CASE(Daily_Summary_Report__r.Status__c,
&apos;Open&apos;, &apos;Open&apos;,
&apos;Submitted&apos;, &apos;Submitted&apos;,
&apos;Pending&apos;, &apos;Pending&apos;,
&apos;Ops Mgr - Approved&apos;, &apos;Ops Mgr - Approved&apos;,
&apos;Approved&apos;, &apos;Approved&apos;,
&apos;Invoiced&apos;, &apos;Invoiced&apos;,
&apos;Rejected&apos;, &apos;Rejected&apos;,
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSJS Status</label>
    <type>Text</type>
</CustomField>