force-app/main/default/objects/Daily_Report__c/fields/Fuel_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Delivered__c</fullName>
    <label>Fuel Delivered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>