force-app/main/default/objects/Daily_Report__c/fields/Fuel_Levels__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Levels__c</fullName>
    <label>Fuel Levels (L)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>