force-app/main/default/objects/Daily_Report__c/fields/Incident_Notes__c.field-meta.xml
<CustomField>
    <fullName>Incident_Notes__c</fullName>
    <inlineHelpText>Details to be provided if any incident occurs</inlineHelpText>
    <label>LTI Incident Notes</label>
    <type>TextArea</type>
</CustomField>