force-app/main/default/objects/Daily_Report__c/fields/Incident_Occurred__c.field-meta.xml
<CustomField>
    <fullName>Incident_Occurred__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To be checked when an incident has occurred</inlineHelpText>
    <label>LTI Incident Occurred?</label>
    <type>Checkbox</type>
</CustomField>