force-app/main/default/objects/Daily_Report__c/fields/isLockedForUnitManager__c.field-meta.xml
<CustomField>
    <fullName>isLockedForUnitManager__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When ticked the DSJ is locked from Unit Manager</inlineHelpText>
    <label>isLockedForUnitManager</label>
    <type>Checkbox</type>
</CustomField>