force-app/main/default/objects/Daily_Report__c/fields/isLockedForUnitStaff__c.field-meta.xml
<CustomField>
    <fullName>isLockedForUnitStaff__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When ticked this means the DSJ is locked for Camp cooks and anyone below Unit Manager</inlineHelpText>
    <label>isLockedForUnitStaff</label>
    <type>Checkbox</type>
</CustomField>