force-app/main/default/objects/Daily_Report__c/fields/Job_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Job_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Assignment</label>
    <referenceTo>Contract_Assignment__c</referenceTo>
    <relationshipName>Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>