force-app/main/default/objects/Daily_Report__c/fields/Line_on_Spool__c.field-meta.xml
<CustomField>
    <fullName>Line_on_Spool__c</fullName>
    <label>Line on Spool</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>