force-app/main/default/objects/Daily_Report__c/fields/Line_Slipped__c.field-meta.xml
<CustomField>
    <fullName>Line_Slipped__c</fullName>
    <label>Line Slipped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>