force-app/main/default/objects/Daily_Report__c/fields/No_of_KM_s_from_Previous_Site__c.field-meta.xml
<CustomField>
    <fullName>No_of_KM_s_from_Previous_Site__c</fullName>
    <inlineHelpText>Relevant to only Rig Daily Site Job Reports</inlineHelpText>
    <label>#No of KM&apos;s from Previous Site</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>