force-app/main/default/objects/Daily_Report__c/fields/Ops_Sup__c.field-meta.xml
<CustomField>
    <fullName>Ops_Sup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ops Sup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Daily_Site_Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>