force-app/main/default/objects/Daily_Report__c/fields/OpsSupervisorApprovalNotes__c.field-meta.xml
<CustomField>
    <fullName>OpsSupervisorApprovalNotes__c</fullName>
    <label>Ops Supervisor Approval Notes</label>
    <type>TextArea</type>
</CustomField>