force-app/main/default/objects/Daily_Report__c/fields/OpsSupervisorRejected__c.field-meta.xml
<CustomField>
    <fullName>OpsSupervisorRejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OpsSupervisorRejected</label>
    <type>Checkbox</type>
</CustomField>