force-app/main/default/objects/Daily_Report__c/fields/Rubbish_Levels__c.field-meta.xml
<CustomField>
    <fullName>Rubbish_Levels__c</fullName>
    <label>Rubbish Levels (%)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>