force-app/main/default/objects/Daily_Report__c/fields/Septic_Levels__c.field-meta.xml
<CustomField>
    <fullName>Septic_Levels__c</fullName>
    <label>Septic Levels (L)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>