force-app/main/default/objects/Daily_Report__c/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <formula>CASESAFEID(Site__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site ID</label>
    <type>Text</type>
</CustomField>