force-app/main/default/objects/Daily_Report__c/fields/Total_Fuel_Used__c.field-meta.xml
<CustomField>
    <fullName>Total_Fuel_Used__c</fullName>
    <label>Total Fuel Used</label>
    <summarizedField>Daily_Report_Item__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Daily_Report_Item__c.Item_Name_Editable__c</field>
        <operation>contains</operation>
        <value>Fuel Used</value>
    </summaryFilterItems>
    <summaryForeignKey>Daily_Report_Item__c.Daily_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>