force-app/main/default/objects/Daily_Report__c/fields/Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Unit_ID__c</fullName>
    <formula>CASESAFEID(Unit__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit ID</label>
    <type>Text</type>
</CustomField>