force-app/main/default/objects/Daily_Report__c/fields/Unit_Manager_Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Unit_Manager_Approval_Notes__c</fullName>
    <label>Unit Manager Approval Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>