force-app/main/default/objects/Daily_Report__c/fields/UnitIsStandAlone__c.field-meta.xml
<CustomField>
    <fullName>UnitIsStandAlone__c</fullName>
    <description>8 May: changed definitions to also return true if only one unit is populated</description>
    <formula>(Site__r.WD_Camp__c =  Site__r.WD_Rig__c)
||
ISBLANK(Site__r.WD_Rig__c)
||
ISBLANK(Site__r.WD_Camp__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the WD Camp and WD Rig in Site is the same</inlineHelpText>
    <label>Unit is Stand Alone</label>
    <type>Checkbox</type>
</CustomField>