force-app/main/default/objects/Daily_Report__c/recordTypes/Rig_Camp.recordType-meta.xml
<RecordType>
    <fullName>Rig_Camp</fullName>
    <active>true</active>
    <label>Rig Camp</label>
</RecordType>