force-app/main/default/objects/Daily_Report__c/recordTypes/Transport.recordType-meta.xml
<RecordType>
    <fullName>Transport</fullName>
    <active>true</active>
    <label>Transport</label>
</RecordType>