force-app/main/default/objects/Daily_Report__c/validationRules/Cant_change_Report_Date_Once_Created.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_change_Report_Date_Once_Created</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(Report_Date__c) 
)</errorConditionFormula>
    <errorMessage>You cannot change Daily Site Job&apos;s Report Date once created</errorMessage>
</ValidationRule>