force-app/main/default/objects/Daily_Report__c/validationRules/Cant_Create_Daily_Report_ContractExpired.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Create_Daily_Report_ContractExpired</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(
ISNEW(),
NOT(ISBLANK(Contract__c)),
NOT(Contract__r.Contract_Active__c)
),
TRUE, 
FALSE 
)</errorConditionFormula>
    <errorMessage>Cannot Create Daily Site Job for an expired Contract.</errorMessage>
</ValidationRule>