force-app/main/default/objects/Daily_Report__c/validationRules/Cant_Create_DSJ_WO_CM_or_OCR.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Create_DSJ_WO_CM_or_OCR</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
ISBLANK( Contract__r.Manager_Ops_Sup__c ),
ISBLANK( Contract__r.Company_Manager__c ) 
)</errorConditionFormula>
    <errorMessage>Missing Manager (Ops - Sup) or OCR on Contract. Can&apos;t create a Daily Site Job without Manager (Ops - Sup) &amp; OCR</errorMessage>
</ValidationRule>