force-app/main/default/objects/Daily_Report__c/validationRules/Cant_Create_Site_Job_without_Unit_Mgr.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Create_Site_Job_without_Unit_Mgr</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISBLANK(  Unit__r.Manager__c ) 
)</errorConditionFormula>
    <errorMessage>Can&apos;t create a Daily Site Job without a Manager. Manager must be populated on Unit before creating a Daily Site Job.</errorMessage>
</ValidationRule>