force-app/main/default/objects/Daily_Report__c/validationRules/Cant_Edit_Status_Submitted_Invoiced.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Edit_Status_Submitted_Invoiced</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  
AND (
OR(ISCHANGED( Site__c ) , ISCHANGED( Type__c ) , ISCHANGED( Unit__c ) , ISCHANGED( Auto_Create_Daily_Report_Items__c ),  ISCHANGED( Contract__c ),  ISCHANGED( Report_Date__c )),
OR(TEXT( Status__c ) = &apos;Submitted&apos;,TEXT( Status__c ) = &apos;Invoiced&apos;)
) , 
TRUE, 
FALSE 
)</errorConditionFormula>
    <errorMessage>Cannot Edit a Daily Report for a Status Submitted Or Invoiced</errorMessage>
</ValidationRule>