force-app/main/default/objects/Daily_Report__c/validationRules/Notes_Required_if_Incident_Occurred.validationRule-meta.xml
<ValidationRule>
    <fullName>Notes_Required_if_Incident_Occurred</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 Incident_Occurred__c,
 ISBLANK(Incident_Notes__c) 
)</errorConditionFormula>
    <errorDisplayField>Incident_Notes__c</errorDisplayField>
    <errorMessage>Kindly, fill out the details for the incident occurred.</errorMessage>
</ValidationRule>