force-app/main/default/objects/Daily_Report__c/validationRules/Rubbish_Levels_Required_If_Rig_Camp.validationRule-meta.xml
<ValidationRule>
    <fullName>Rubbish_Levels_Required_If_Rig_Camp</fullName>
    <active>true</active>
    <description>Rubbish Levels (%) is required field if Unit Type is Rig or Camp</description>
    <errorConditionFormula>AND(
   OR(ISPICKVAL( Type__c , &quot;Rig&quot;), 
      ISPICKVAL( Type__c , &quot;Camp&quot;)
   ),
 ISBLANK( Rubbish_Levels__c ) 
)</errorConditionFormula>
    <errorDisplayField>Rubbish_Levels__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>