force-app/main/default/objects/Daily_Report__c/validationRules/Septic_Levels_Required_If_Rig_Camp.validationRule-meta.xml
<ValidationRule>
    <fullName>Septic_Levels_Required_If_Rig_Camp</fullName>
    <active>true</active>
    <description>Septic Levels (L) is required field if Unit Type is Rig or Camp</description>
    <errorConditionFormula>AND(
   OR(ISPICKVAL( Type__c , &quot;Rig&quot;), 
      ISPICKVAL( Type__c , &quot;Camp&quot;)
   ),
 ISBLANK( Septic_Levels__c ) 
)</errorConditionFormula>
    <errorDisplayField>Septic_Levels__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>