force-app/main/default/objects/Daily_Report__c/listViews/Camp_10_Santos_SA_611.listView-meta.xml
<ListView>
    <fullName>Camp_10_Santos_SA_611</fullName>
    <columns>Type__c</columns>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Report_Date__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Daily_Summary_Report__c</columns>
    <columns>Invoice__c</columns>
    <columns>Contract__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>611</value>
    </filters>
    <label>Camp 10 - Santos SA (611)</label>
    <sharedTo>
        <group>Camp_10</group>
        <group>Camp_Supervisor</group>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
    </sharedTo>
</ListView>