force-app/main/default/objects/Daily_Report__c/listViews/Camp_11_Camp_6.listView-meta.xml
<ListView>
    <fullName>Camp_11_Camp_6</fullName>
    <columns>NAME</columns>
    <columns>Unit__c</columns>
    <columns>Daily_Summary_Report__c</columns>
    <columns>Manager__c</columns>
    <columns>Ops_Sup__c</columns>
    <columns>Report_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>Camp 6,Camp 11</value>
    </filters>
    <label>Camp 11/ Camp 6</label>
    <sharedTo>
        <group>Finance</group>
    </sharedTo>
</ListView>