force-app/main/default/objects/Daily_Report__c/listViews/Camp_3_Fluid_Levels_Santos_SA_241.listView-meta.xml
<ListView>
    <fullName>Camp_3_Fluid_Levels_Santos_SA_241</fullName>
    <columns>NAME</columns>
    <columns>Report_Date__c</columns>
    <columns>Site__c</columns>
    <columns>Status__c</columns>
    <columns>Rubbish_Levels__c</columns>
    <columns>Septic_Levels__c</columns>
    <columns>Water_Levels__c</columns>
    <columns>Fuel_Levels__c</columns>
    <columns>Fuel_Delivered__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>591</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Camp</value>
    </filters>
    <label>Camp 3 | Fluid Levels | Beach (591)</label>
    <sharedTo>
        <group>Camp_3</group>
        <group>Camp_Supervisor</group>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Safety</group>
    </sharedTo>
</ListView>