force-app/main/default/objects/Daily_Report__c/listViews/Camp_7_Fluid_Levels_Santos_SA_239.listView-meta.xml
<ListView>
    <fullName>Camp_7_Fluid_Levels_Santos_SA_239</fullName>
    <columns>NAME</columns>
    <columns>Report_Date__c</columns>
    <columns>Site__c</columns>
    <columns>Status__c</columns>
    <columns>Rubbish_Levels__c</columns>
    <columns>Septic_Levels__c</columns>
    <columns>Water_Levels__c</columns>
    <columns>Fuel_Levels__c</columns>
    <columns>Fuel_Delivered__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>239</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Camp</value>
    </filters>
    <label>Camp 7 | Fluid Levels | Santos SA (239)</label>
    <sharedTo>
        <group>Camp_7</group>
        <group>Camp_Supervisor</group>
        <group>Finance</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Safety</group>
    </sharedTo>
</ListView>